assert-struct/tests/snapshots/nested_field_access__deep_nested_mismatch.snap
---
source: assert-struct/tests/nested_field_access.rs
expression: message
---
assert_struct! failed:
expected "actual" to match "expected"
