assert-struct/tests/snapshots/nested_field_access__nested_comparison_failure.snap
---
source: assert-struct/tests/nested_field_access.rs
expression: message
---
assert_struct! failed:

   | Container {
mismatch:
  --> `container.data.score` (line 22)
   |     score: > 50,
   |            ^^^^ actual: 25
   | }
