assert-struct/tests/snapshots/nested_field_access__simple_nested_mismatch.snap
---
source: assert-struct/tests/nested_field_access.rs
expression: message
---
assert_struct! failed:
expected 42 to match 100
